<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_planner</name>
  <version>0.0.0</version>
  <description>LLM-based planning with Expected Outcomes Framework for robotic manipulation tasks</description>
  <maintainer email="ines@example.com">ines</maintainer>
  <license>TODO: License declaration</license>

  <!-- <build_depend>ament_cmake_python</build_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cognitive_node_interfaces</exec_depend>
  <exec_depend>core_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
