# [metadata]
# name = llm_planner
# version = 0.0.0

# [options]
# zip_safe = True
# include_package_data = True
# packages = find:
# python_requires = >=3.10
# install_requires =
#   pyyaml
#   numpy

# [options.packages.find]
# where = .
# exclude =
#   test
[develop]
script_dir=$base/lib/llm_planner
[install]
install_scripts=$base/lib/llm_planner